res/istio/jwtrules.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-db-req
  namespace: appspace
spec:
  selector:
    matchLabels:
      app: api-db
  jwtRules:
  - issuer: http://15.188.86.125/auth/realms/appcloak
    jwksUri: http://keycloak-service.kcloak.svc.cluster.local:8080/auth/realms/appcloak/protocol/openid-connect/certs
    forwardOriginalToken: true
    fromHeaders: 
      - name: x-auth-request-access-token
