res/istio/policy2.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-peer  #name of the policy
  namespace: appspace
spec:
  mtls:
    mode: STRICT
