res/istio/egate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: exit-gateway
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: HTTPS
    hosts:
    - timeapi.io
    tls:
      mode: PASSTHROUGH
---

# Routes internal outbound traffic to the egress gateway using Istio's mTLS
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-timeapi
  namespace: appspace
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: timeapi-ext

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: through-egress-gateway
  namespace: istio-system
spec:
  hosts:
  - timeapi.io
  gateways:
  - mesh
  - exit-gateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - timeapi.io
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: timeapi-ext
        port:
          number: 443
  - match:
    - gateways:
      - exit-gateway
      port: 443
      sniHosts:
      - timeapi.io
    route:
    - destination:
        host: timeapi.io
        port:
          number: 443
      weight: 100
