res/istio/igate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: micro-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-microvs
spec:
  hosts:
  - "*"
  gateways:
  - micro-gateway
  http:
  - match:
    - uri:
        prefix: "/topics"
    route:
    - destination:
        host: api-db-service.appspace.svc.cluster.local
        port:
          number: 3003
  - match:
    - uri:
        prefix: "/debug"
    route:
    - destination:
        host: api-db-service.appspace.svc.cluster.local
        port:
          number: 3003
  - match:
    - uri:
        prefix: "/userinfo"
    route:
    - destination:
        host: api-usr-service.appspace.svc.cluster.local
        port:
          number: 3005
  - match:
      - uri:
          prefix: "/oauth2"
    route:
      - destination:
          host: oauth-proxy-service.default.svc.cluster.local
          port:
            number: 4180
  - match:
    - uri:
        prefix: "/updates"
    route:
    - destination:
        host: api-two-service.appspace.svc.cluster.local
        port:
          number: 3002
  - match:
    - uri:
        prefix: "/sockjs-node"
    route:
    - destination:
        host: react-service.appspace.svc.cluster.local
        port:
          number: 3000
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: react-service.appspace.svc.cluster.local
        port:
          number: 3000
