res/istio/policy.yaml
#Policy that by defaults denies all access
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "deny-all"
  namespace: istio-system
spec: 
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "in-two"
  namespace: appspace
spec:
  selector:
    matchLabels:
      app: api-two
  rules:

  #Routes coming from microdb
  - from:
    - source:
        principals: ["cluster.local/ns/appspace/sa/db-acc"]
    to:
    - operation:
        paths: ["/updates/*"]
        methods: ["DELETE"]

  #Routes coming from the gate
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        paths: ["/updates/*"]
        methods: ["GET", "POST"]

  #Routes coming from the probe
  - from:
    - source:
        principals: ["cluster.local/ns/appspace/sa/probe-acc"]
    to:
    - operation:
        methods: ["GET"]

---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "gate-react"
  namespace: appspace
spec:
  selector:
    matchLabels:
      app: react-fend
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]

---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-in-gate"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules: 
    - to:
      - operation:
          notPaths: ["/oauth2/*", "/sockjs-node/*"]
          paths: ["/*"]
   
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-in-gate-oauth"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules: 
    - to:
      - operation:
          paths: ["/oauth2/*", "/sockjs-node/*"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-proxy-in-gate"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  rules: 
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "in-usr"
  namespace: appspace
spec:
  selector:
    matchLabels:
      app: api-usr
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    to:
    - operation:
        paths: ["/userinfo"]
        methods: ["GET"]
  - from:
    - source:
        principals: ["cluster.local/ns/appspace/sa/db-acc"]
    to:
    - operation:
        paths: ["/userinfo/*"]
        methods: ["GET"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-eastwest-gate"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: eastwestgateway
  rules: 
    - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "sleep-hello"
  namespace: sample
spec:
  selector:
    matchLabels:
      app: helloworld
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sample/sa/sleep"]
    to:
    - operation:
        paths: ["/hello"]
        methods: ["GET"]
